# ethibench

./: .env.sample  .gitignore  .releaserc.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: checks.main-pr.yaml  release.main.yaml
compare_all/: comparison.json  comparison.md  pairwise_comparison.md  pairwise_comparison.tex
compare_all/cumulative-analysis/: comparison.json
examples/: dataset-full.yaml  dataset.yaml  mini-bench.yaml
examples/gt/: paygoat_gt.jsonl  vulnbank_gt.jsonl  xben_gt.jsonl
experiments/aggregated_analysis/: all_duplicates.jsonl  all_false_positives.jsonl  gt_statistics_avg.json
experiments/claude-code-sonnet/: temporal_evaluation.py
experiments/claude-code-sonnet/evaluation_outputs/: metrics_summary.json  summary.md
experiments/pentagi-deepseek/evaluation_outputs/: metrics_summary.json  summary.md
experiments/pentagi-gpt/evaluation_outputs/: metrics_summary.json  summary.md
experiments/pentagi-qwen/evaluation_outputs/: metrics_summary.json  summary.md
matching_experiments/: README.md  _generate_selection.py  annotations.json  findings.jsonl  run_experiment.py  selected_findings.json
matching_experiments/results/: deepseek-3.1.json  gemini-3-flash.json  gpt-5.4-mini.json  haiku-4.5.json  qwen-3.6-plus.json
src/ethibench/: __init__.py  cli.py  config.py  convert_report.py  cumulative_analysis.py  datasets.py  evaluate.py  llm.py  metrics.py  models.py  pairwise.py  plots.py  report.py  results.py  subset.py  temporal.py
src/ethibench/analysis/: duplicates.py  unmatched.py  (+1 more)
(+858 files in other folders)
